<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
    <string name="app_name">VCode</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_status">Place the product barcode inside the rectangle.</string>

    <!-- New codes for VCode -->
    <string name="product_is_vegan">Product is vegan</string>
    <string name="product_is_not_vegan">Product is not vegan</string>
    <string name="product_is_unknown">Product is unknown</string>
    <string name="checking_product">Checking product</string>
    <string name="report_vegan">Report vegan</string>
    <string name="report_not_vegan">Report not vegan</string>
    <string name="alternatives">Alternatives</string>
    <string name="product_image_placeholder">Product image</string>
    <string name="network_error">No internet connection</string>
    <string name="no_internet_connection">You have no internet connection. Please connect and try again.</string>
    <string name="error">Error</string>
    <string name="sample_barcode">552224411435</string>
    <string name="sample_product_name">Product name</string>
    <string name="sample_company_name">Company name</string>
    <string name="add_product_name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="product_details">Product details</string>
    <string name="company_name">Company</string>
    <string name="oops">Oops!</string>
    <string name="default_error">An error has occured</string>
    <string name="retry">Retry</string>
    <string name="invalid_barcode">invalid_barcode</string>
</resources>
